alteração nos métodos show,store,update e delete e atualização na documentação
